Revision history for WWW::Mechanize

{{$NEXT}}
    [ENHANCEMENTS]
    - mech_dump now treats all local files like HTML regardless of what it
      thinks their content types are (GH#63) (Julien Fiegehenn)
    - We now consistently use our own die() method and therefore the onerror
      handler wherever possible (GH#80) (Julien Fiegehenn)

2.12      2022-07-20 06:45:40Z

    [ENHANCEMENTS]
    - form_name(), form_id(), form_with() and form_with_fields() can now all
      return the nth instance of a form instead of always returning the first
      instance (GH#110) (Jeff Culverhouse and Julien Fiegehenn)

    [TESTS]
    - Tests using a local temporary server are now safe to use with HTTP/1.1
      and keep-alive (GH #14) (Stanislaw Pusep and Julien Fiegehenn)
    - We now use Test::Pod::LinkCheck to ensure there are no broken links in
      our documentation (GH #337) (Julien Fiegehenn)

2.11      2022-07-17 17:25:39Z

    [FIXED]
    - tick() can now handle checkboxes without a value (GH#331) (Jordan M Adler
      and Julien Fiegehenn)

    [ENHANCEMENTS]
    - set_fields() and submit_form(with_fields => ...) can now set multiple
      choice inputs (e.g. select and radio) to the nth value (GH29) (Alastair
      Douglas and Julien Fiegehenn)

2.10      2022-07-04 21:06:13Z

    [ENHANCEMENTS]
    - Added form_action($action) to look up forms by regex matching $action (GH#19)
      (Mark Leighton Fisher and Julien Fiegehenn)

    [DOCUMENTATION]
    - Explain that file URIs need url encoding (GH#329) (Julien Fiegehenn and
      積丹尼 Dan Jacobson)

2.09      2022-06-14 14:20:04Z
    [DOCUMENTATION]
    - Various POD fixes (Julien Fiegehenn)

2.08      2022-05-30 17:32:33Z
    [TESTS]
    - Drop CGI and HTTP::Server::Simple::CGI test dependencies (GH#327) (Graham
      Knop)

2.07      2022-04-29 15:39:17Z
    [FIXED]
    - Don't follow redirects in some tests (GH#326) (Olaf Alders)

2.06      2021-10-25 20:56:12Z
    [DOCUMENTATION]