@@ -13,6 +13,7 @@
 <input type="hidden" name="__value" value>
 <input type="hidden" name="__value_empty" value="">
 <input type="hidden" name="__value_full" value="full">
+<textarea rows="5" cols="60" id="textarea_id" name="textarea_name"></textarea>
 </FORM>
 </BODY>
 </HTML>
